--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 #*.lock
 
 # ----- Folders to ignore
-/3rparty/awss
+#/3rparty/awss/.git
+
+# ----- Pour intégrer awss
+/3rparty/awss/.bak.git
+/3rparty/awss/.bak.gitignore
 
 # ----- Files to accept
 #!aruba-ws-server.php
