--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@
 #*.lock
 
 # ----- Folders to ignore
-#/3rparty/awss/.git
+/3rparty/awss/
 
 # ----- Pour intégrer awss
-/3rparty/awss/.bak.git
-/3rparty/awss/.bak.gitignore
+#/3rparty/awss/.bak.git
+#/3rparty/awss/.bak.gitignore
 
 # ----- Files to accept
 #!aruba-ws-server.php
